--- a/about.html
+++ b/about.html
@@ -23,12 +23,14 @@
         </ul>
       </nav>
     </header>
-    <div id="wrapper">
+    <div class="wrapper">
       <section>
-        <img src="img/Ross.jpg" alt="Photograph of Ross Maske" class="profile-photo">
+			<img src="img/Ross.jpg" alt="Photograph of Ross Maske" id="profile-photo">
         <h3>About</h3>
         <p>Hi, I'm Ross Maske! This is my portfolio of miniprojects where I share all of my favroite work. When I'm not designing things, I enjoy snowboarding, playing golf and hanging out with friends</p>
         <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/RossMaske">@RossM</a>.</p>
+		<span>Move the mouse over the div.</span>
+		<span>&nbsp;</span>
       </section>
       <footer>
         <a href="http://twitter.com/RossM"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
@@ -36,5 +38,7 @@
         <p>&copy; 2014 Ross Maske.</p>
       </footer>
     </div>
+	<script src="js/jquery.js"></script>
+	<script src="js/app.js"></script>
   </body>
 </html>
