--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">Projects</a></li>
+          <li><a href="index.html" class="selected">Projects</a>
+			<ul>
+				<li><a href="'#">Arduino</a></li>
+				<li><a href="'#">Stocks</a></li>
+				<li><a href="'#">Binding</a></li>
+			</ul>
+		 </li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
