Corrected spelling mistakes and added drop down bar to all pages

--- a/about.html
+++ b/about.html
@@ -17,7 +17,13 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html">Portfolio</a></li>
+          <li><a href="index.html">Projects</a>
+			<ul>
+				<li><a href="'#">Arduino</a></li>
+				<li><a href="'#">Stocks</a></li>
+				<li><a href="'#">Binding</a></li>
+			</ul>
+		 </li>
           <li><a href="about.html" class="selected">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -25,15 +31,16 @@
     </header>
     <div class="wrapper">
       <section>
-			<img src="img/Ross.jpg" alt="Photograph of Ross Maske" id="profile-photo">
+			<img src="img/me.jpg" alt="Photograph of Ross Maske" id="profile-photo">
+			<!--<div id="me"></div>-->
         <h3>About</h3>
-        <p>Hi, I'm Ross Maske! This is my portfolio of miniprojects where I share all of my favroite work. When I'm not designing things, I enjoy snowboarding, playing golf and hanging out with friends</p>
-        <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/RossMaske">@RossM</a>.</p>
+        <p>Hi, I'm Ross Maske! This is my portfolio of mini projects where I share all of my favourite work. When I'm not designing things, I enjoy snowboarding, playing golf and hanging out with friends</p>
+        <p>If you'd like to follow me on Twitter, my user name is <a href="http://twitter.com/RossMaske">@RossMaske</a>.</p>
 		<span>Move the mouse over the div.</span>
 		<span>&nbsp;</span>
       </section>
       <footer>
-        <a href="http://twitter.com/RossM"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://twitter.com/RossMaske"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="http://facebook.com/Rossmaske"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2014 Ross Maske.</p>
       </footer>
