--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,14 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Projects</a>
+			<ul>
+				<li><a href="'#">Arduino</a></li>
+				<li><a href="'#">Stocks</a></li>
+				<li><a href="'#">Binding</a></li>
+			</ul>
+		 </li>
+          <li><a href="about.html" >About</a></li>
           <li><a href="contact.html" class="selected">Contact</a></li>
         </ul>
       </nav>
@@ -33,12 +39,12 @@
         <h3>Contact Details</h3>
         <ul class="contact-info">
           <li class="phone"><a href="tel:555-6425">555-6425</a></li>
-          <li class="mail"><a href="mailto:nick@example.com">ross@example.com</a></li>
-          <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=nickrp">@RossM</a></li>
+          <li class="mail"><a href="mailto:Ross.Maske11@Imperial.ac.uk">Ross.Maske11@Imperial.ac.uk</a></li>
+          <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=nickrp">@RossMaske</a></li>
         </ul>
       </section>
       <footer>
-        <a href="http://twitter.com/RossM"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://twitter.com/RossMaske"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="http://facebook.com/RossMaske"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2014 Ross Maske.</p>
       </footer>
