--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
     <div id="wrapper">
       <section>
         <ul id="gallery">
-          <li>
+           <li>
+            <a href="img/stocks.jpg">
+              <img src="img/stocks.jpg" alt="">
+              <p>Modelling stock prices using ident in Matlab</p>
+            </a>
+          </li>
+		  <li>
             <a href="img/arduino.jpg">
               <img src="img/arduino.jpg" alt="">
               <p>PID temperature control using Arduino</p>
             </a>
           </li>
           <li>
-            <a href="img/stocks.jpg">
-              <img src="img/stocks.jpg" alt="">
-              <p>Modelling stock prices using ident in Matlab</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/Burton_snowboardBinding.jpg">
-              <img src="img/Burton_snowboardBinding.jpg" alt="">
+            <a href="img/snowboard.jpg">
+              <img src="img/snowboard.jpg" alt="">
               <p>Creating a innotavtive solution to impact adsorption in snowboard bindings</p>
             </a>
           </li>
           </ul>
       </section>
       <footer>
-        <a href="http://twitter.com/RossM"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://twitter.com/RossMaske"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="http://facebook.com/RossMaske"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2014 Ross Maske.</p>
       </footer>
