--- a/about.html
+++ b/about.html
@@ -31,9 +31,10 @@
     </header>
     <div class="wrapper">
       <section>
-			<img src="img/me.jpg" alt="Photograph of Ross Maske" id="profile-photo">
-			<!--<div id="me"></div>-->
-        <h3>About</h3>
+			<!--<img src="img/me.jpg" alt="Photograph of Ross Maske" id="profile-photo">-->
+		<div id="space"></div>
+	    <div class="me1" id="me"></div>
+		<h3>About</h3>
         <p>Hi, I'm Ross Maske! This is my portfolio of mini projects where I share all of my favourite work. When I'm not designing things, I enjoy snowboarding, playing golf and hanging out with friends</p>
         <p>If you'd like to follow me on Twitter, my user name is <a href="http://twitter.com/RossMaske">@RossMaske</a>.</p>
 		<span>Move the mouse over the div.</span>
