Stable working version for github

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 		<h3>About</h3>
         <p>Hi, I'm Ross Maske! This is my portfolio of mini projects where I share all of my favourite work. When I'm not designing things, I enjoy snowboarding, playing golf and hanging out with friends</p>
         <p>If you'd like to follow me on Twitter, my user name is <a href="http://twitter.com/RossMaske">@RossMaske</a>.</p>
-		<span>Move the mouse over the div.</span>
+		<!--<span>Move the mouse over the div.</span>-->
 		<span>&nbsp;</span>
       </section>
       <footer>
